# WEB_HW_9

./: LICENSE  README.md  pyproject.toml
bs_scraping/: authors.json  cache.py  connect.py  main.py  models.py  queries.py  quotes.json  seeds.py
scrapy/: authors.json  cache.py  connect.py  main.py  quotes.json
